fixing AboutMe layout on mobile

--- a/src/main/HelloScreen.css
+++ b/src/main/HelloScreen.css
@@ -26,7 +26,7 @@
 }
 
 #hello-screen-overlay h2 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Overpass', sans-serif;
 }
 
 .class-invisible {
