--- a/src/main/index.css
+++ b/src/main/index.css
@@ -1,8 +1,10 @@
 * {
     font-size: 14px;
     /*font-family: 'Open Sans', sans-serif;*/
-    /*font-family: 'Overpass', sans-serif;*/
-    font-family: 'Roboto Flex', sans-serif;
+    font-family: 'Overpass', sans-serif;
+    /*font-family: 'Roboto Flex', sans-serif;*/
+
+
     margin: 0;
     padding: 0;
     -webkit-font-smoothing: antialiased;
